--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,8 @@ addons:
 before_install:
 - echo $LANG
 - echo $LC_ALL
+- sudo apt-get -qq update
+- sudo apt-get install -y make
 install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget --no-check-certificate http://cmake.org/files/v3.4/cmake-3.4.3-Linux-x86_64.tar.gz   ;fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then tar -xzf cmake-3.4.3-Linux-x86_64.tar.gz                                                  ;fi
